--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "license": "CC-BY-NC-ND-4.0",
   "dependencies": {
+    "@formkit/auto-animate": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4"
   },
