--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "CC-BY-NC-ND-4.0",
   "dependencies": {
     "@formkit/auto-animate": "^0.7.0",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
